# inertially

./: manage.py  pyproject.toml
core/: app.vue  urls.py  views.py
embalae/: asgi.py  settings.py  urls.py  wsgi.py
inertially/: asgi.py  settings.py  urls.py  views.py  wsgi.py
templates/: app.vue  base.html
