[tool.poetry]
name = "embalae-backend"
version = "0.1.0"
description = ""
authors = ["joaoprocopio <joaovitorcprocopio@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.1"
inertia-django = "^0.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
